# NyxPlay

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
config/: default.toml  nyxplay.service
docs/: roadmap.md
scripts/: install.sh
src/nyxplay/: __init__.py  actions.py  combos.py  config.py  controller.py  hyprland.py  launcher.py  lockpin.py  main.py
src/nyxplay/default/: config.toml  nyxplay.service
