[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nyxplay"
version = "0.1.0"
description = "Xbox controller combo daemon for launching Steam Big Picture through gamescope and other desktop actions"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Camille" }
]
dependencies = [
  "evdev"
]

[project.scripts]
nyxplay = "nyxplay.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"